@@ -1,3 +1,7 @@
+Fri Oct 24 18:28:54 2008  Søren Sandmann  <sandmann@redhat.com>
+
+	* sound-properties-capplet.c (main): Use capplet_init()
+
 2008-10-10  Bastien Nocera  <hadess@hadess.net>
 
 	* Makefile.am:
