@@ -1,3 +1,8 @@
+Fri Oct 24 18:29:14 2008  Søren Sandmann  <sandmann@redhat.com>
+
+	* capplet-util.c: Call g_option_context_set_translation_domain on
+	the context.
+
 Fri Oct 24 18:22:06 2008  Søren Sandmann  <sandmann@redhat.com>
 
 	* capplet-util.[ch]: Add new capplet_init() function
